force-app/main/default/objects/ccrz__E_Rule__c/ccrz__E_Rule__c.object-meta.xml
<CustomObject>
    <description>Rule</description>
    <label>CC Rule</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>RuleID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>