force-app/main/default/objects/ccrz__E_Rule__c/fields/ccrz__Name__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Name__c</fullName>
    <description>Name</description>
    <label>Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>