force-app/main/default/objects/ccrz__E_Rule__c/fields/ccrz__RuleId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__RuleId__c</fullName>
    <externalId>true</externalId>
    <label>Rule Id</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>