force-app/main/default/objects/ccrz__E_Rule__c/fields/ccrz__RuleMinQty__c.field-meta.xml
<CustomField>
    <fullName>ccrz__RuleMinQty__c</fullName>
    <description>Minimum quantity of items for value rule</description>
    <label>Rule Min Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>