force-app/main/default/objects/ccrz__E_Rule__c/fields/ccrz__RuleSource__c.field-meta.xml
<CustomField>
    <fullName>ccrz__RuleSource__c</fullName>
    <label>Rule Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pricing</fullName>
                <default>true</default>
                <label>Pricing</label>
            </value>
            <value>
                <fullName>Coupon</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>