force-app/main/default/objects/ccrz__E_Rule__c/fields/ccrz__SourceRelation__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SourceRelation__c</fullName>
    <label>Source Relation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SPEC</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>