force-app/main/default/objects/ccrz__E_Rule__c/listViews/ccrz__All.listView-meta.xml
<ListView>
    <fullName>ccrz__All</fullName>
    <columns>ccrz__Name__c</columns>
    <columns>ccrz__Relation__c</columns>
    <columns>ccrz__RuleId__c</columns>
    <columns>ccrz__RuleMinAmt__c</columns>
    <columns>ccrz__RuleMinQty__c</columns>
    <columns>ccrz__RuleSource__c</columns>
    <columns>ccrz__RuleType__c</columns>
    <columns>ccrz__SourceRelation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>